# rusty-trainer-bot

./: Cargo.toml
src/: main.rs
src/bot/: error.rs  handler.rs  mod.rs  service.rs
src/domain/: mod.rs  model.rs  user_state.rs
src/telegram/: error.rs  handler_functions.rs  messages.rs  mod.rs  service.rs
