[package]
name = "rusty-trainer-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.9.1"
dotenv = "0.15.0"
ureq = { version = "2.5.0", features = ["json"] }
anyhow = "1.0.*"
thiserror = "1.0.*"